@@ -35,7 +35,19 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
         super(name);
     }
     
+    public static boolean isJDK14(){
+        try {
+            SourceVersion.valueOf("RELEASE_14"); //NOI18N
+        } catch (IllegalArgumentException ex) {
+            //OK, no RELEASE_14, skip test
+            return false;
+        }
+        return true;
+    }
+
     public void testSwitch2RuleSwitch() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -49,9 +61,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -68,6 +79,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
     
     public void testLastNotBreak() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -79,9 +92,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -96,6 +108,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
     
     public void testMultipleCases() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -109,9 +123,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -127,6 +140,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
     
     public void testFallThrough() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -139,12 +154,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
     
     public void testMissingLastBreak() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -158,9 +174,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -176,6 +191,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testDefault() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -183,14 +200,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "         String result;\n" +
                        "         switch (p) {\n" +
                        "             case 0: result = \"1\"; break;\n" +
-                       "             default: result = \"d\"; break;\n" +
+                       "             default: result = \"d\"; System.out.println(result); break;\n" +
                        "         }\n" +
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -199,13 +215,17 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                               "         String result;\n" +
                               "         switch (p) {\n" +
                               "             case 0 -> result = \"1\";\n" +
-                              "             default -> result = \"d\";\n" +
+                              "             default -> {\n" +
+                              "                 result = \"d\"; System.out.println(result);\n" +
+                              "             }\n" +
                               "         }\n" +
                               "     }\n" +
                               "}\n");
     }
 
     public void testVariables1() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -225,9 +245,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -251,6 +270,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testFallThroughDefault1() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -264,12 +285,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
 
     public void testFallThroughDefault2() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -283,12 +305,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
 
     public void testTrailingEmptyCase() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -304,9 +327,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -325,6 +347,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testNeedsPreview() throws Exception {
+        if(ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -344,6 +368,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testBreakInside1() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -356,12 +382,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
 
     public void testBreakInside2() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;\n" +
                        "public class Test {\n" +
@@ -376,7 +403,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("4:9-4:15:verifier:Convert switch to rule switch")
                 .applyFix()
@@ -398,6 +424,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testContinueInside1() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;\n" +
                        "public class Test {\n" +
@@ -410,12 +438,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
 
     public void testContinueInside2() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;\n" +
                        "public class Test {\n" +
@@ -432,7 +461,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("5:13-5:19:verifier:Convert switch to rule switch")
                 .applyFix()
@@ -453,6 +481,399 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                               "         }\n" +
                               "     }\n" +
                               "}");
+    }
+
+    //Test cases for switch expression
+
+    public void testSwitch2SwitchExpression() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p) {\n" +
+                       "         String result;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: result = \"1\"; break;\n" +
+                       "             case 2: result = \"2\"; break;\n" +
+                       "             case 3: result = \"3\"; break;\n" +
+                       "             default: result = \"default\"; break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         String result;\n" +
+                              "         result = switch (p) {\n" +
+                              "             case 1 -> \"1\";\n" +
+                              "             case 2 -> \"2\";\n" +
+                              "             case 3 -> \"3\";\n" +
+                              "             default -> \"default\";\n" +
+                              "         };\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionMultiCase() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "    private void test(int p) {\n" +
+                       "        String result;\n" +
+                       "        switch (p) {\n" +
+                       "            case 1:\n" +
+                       "            case 2: result = \"2\"; break;\n" +
+                       "            case 3: result = \"3\"; break;\n" +
+                       "            default: result = \"default\"; break;\n" +
+                       "        }\n" +
+                       "    }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         String result;\n" +
+                              "         result = switch (p) {\n" +
+                              "             case 1, 2 -> \"2\";\n" +
+                              "             case 3 -> \"3\";\n" +
+                              "             default -> \"default\";\n" +
+                              "         };\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionMultiCase2() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "    private void test(int p) {\n" +
+                       "        String result;\n" +
+                       "        switch (p) {\n" +
+                       "            case 1:\n" +
+                       "            case 2: result = \"2\"; break;\n" +
+                       "            case 3: result = \"3\"; break;\n" +
+                       "            default: result = \"default\";\n" +
+                       "        }\n" +
+                       "    }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "    private void test(int p) {\n" +
+                              "        String result;\n" +
+                              "        result = switch (p) {\n" +
+                              "            case 1, 2 -> \"2\";\n" +
+                              "            case 3 -> \"3\";\n" +
+                              "            default -> \"default\";\n" +
+                              "        };\n" +
+                              "    }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionOnlyDefault() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "    private void test(int p) {\n" +
+                       "        String result;\n" +
+                       "        switch (p) {\n" +
+                       "            default: result = \"default\";\n" +
+                       "        }\n" +
+                       "    }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "    private void test(int p) {\n" +
+                              "        String result;\n" +
+                              "        result = switch (p) {\n" +
+                              "            default -> \"default\";\n" +
+                              "        };\n" +
+                              "    }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionNestedInnerSwitchExpression() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p) {\n" +
+                       "         int i = 10;\n" +
+                       "         String result;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: result = switch (i) {\n" +
+                       "                         case 1 -> \"one\"; \n" +
+                       "                         default -> \"Inner default\"; \n" +
+                       "                     }; break;\n" +
+                       "             case 2: result = \"2\"; break;\n" +
+                       "             default: result = \"default\"; break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("4:9-4:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         int i = 10;\n" +
+                              "         String result;\n" +
+                              "         result = switch (p) {\n" +
+                              "             case 1 -> switch (i) {\n" +
+                              "                 case 1 -> \"one\";\n" +
+                              "                 default -> \"Inner default\";\n" +
+                              "         };\n" +
+                              "             case 2 -> \"2\";\n" +
+                              "             default -> \"default\";\n" +
+                              "         };\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionReturnValue() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private String test(int p) {\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: return \"1\"; \n" +
+                       "             default: return \"default\"; \n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("2:9-2:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private String test(int p) {\n" +
+                              "         return switch (p) {\n" +
+                              "             case 1 -> \"1\";\n" +
+                              "             default -> \"default\";\n" +
+                              "         };\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionTypeCast() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p, Object o1, Object o2) {\n" +
+                       "         String result;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: result =  (String)o1; break;\n" +
+                       "             default: result = (String)o2; break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p, Object o1, Object o2) {\n" +
+                              "         String result;\n" +
+                              "         result = (String) (switch (p) {\n" +
+                              "             case 1 -> o1;\n" +
+                              "             default -> o2;\n" +
+                              "         });\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionTypeCastReturn() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private String test(int p, Object o1, Object o2) {\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: return (String)o1;\n" +
+                       "             default: return (String)o2;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("2:9-2:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private String test(int p, Object o1, Object o2) {\n" +
+                              "         return (String) (switch (p) {\n" +
+                              "             case 1 -> o1;\n" +
+                              "             default -> o2;\n" +
+                              "         });\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionNestedSwitchExpression() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p, int q, Object o1, Object o2) {\n" +
+                       "         String result;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: result =  (String)(switch(q){ \n" +
+                       "                        case 2 -> o2; \n" +
+                       "                        default -> o1;\n" +
+                       "                        }); break; \n" +
+                       "             default: result = (String)o2; break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p, int q, Object o1, Object o2) {\n" +
+                              "         String result;\n" +
+                              "         result = (String) (switch (p) {\n" +
+                              "             case 1 -> switch(q){ \n" +
+                              "                        case 2 -> o2; \n" +
+                              "                        default -> o1;\n" +
+                              "                        };\n" +
+                              "             default -> o2;\n" +
+                              "         });\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionNestedOuterSwitchStatement() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p) {\n" +
+                       "         String result;\n" +
+                       "         int x = 10;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1 : \n" +
+                       "                switch (x) {\n" +
+                       "                    case 1 : result = \"1\"; break;\n" +
+                       "                    default : result =  \"Inner Default\"; break;\n" +
+                       "                }\n" +
+                       "             break;\n" +
+                       "             default:\n" +
+                       "                result = \"d\";\n" +
+                       "                break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("4:9-4:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         String result;\n" +
+                              "         int x = 10;\n" +
+                              "         switch (p) {\n" +
+                              "             case 1 -> {\n" +
+                              "                switch (x) {\n" +
+                              "                    case 1 : result = \"1\"; break;\n" +
+                              "                    default : result =  \"Inner Default\"; break;\n" +
+                              "                 }\n" +
+                              "             }\n" +
+                              "             default -> result = \"d\";\n" +
+                              "         }\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionNestedInnerSwitchStatement() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p) {\n" +
+                       "         String result;\n" +
+                       "         int x = 10;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1 : \n" +
+                       "                switch (x) {\n" +
+                       "                    case 1 : result = \"1\"; break;\n" +
+                       "                    default : result =  \"Inner Default\"; break;\n" +
+                       "                }\n" +
+                       "                break;\n" +
+                       "             default:\n" +
+                       "                result = \"d\";\n" +
+                       "                break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("6:16-6:22:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         String result;\n" +
+                              "         int x = 10;\n" +
+                              "         switch (p) {\n" +
+                              "             case 1 :\n" +
+                              "             result = switch (x) {\n" +
+                              "                 case 1 -> \"1\";\n" +
+                              "                 default ->  \"Inner Default\";\n" +
+                              "             };\n" +
+                              "                 break;\n\n" +
+                              "             default:\n" +
+                              "                 result = \"d\";\n" +
+                              "                 break;\n" +
+                              "         }\n" +
+                              "     }\n" +
+                              "}\n");
     }
 
     public static Test suite() {
